--- a/helper/template/helper/index.html
+++ b/helper/template/helper/index.html
@@ -48,7 +48,7 @@
 		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="">SS</a>
 		        </div>
 		    </div>
-            <h3 class="righteous text-center my-2">Next Solver comming soon....</h3>
+            <h3 class="righteous text-center my-2">Next Solver comming soon....<br>AEC & SS is Not Deployed Now..</h3>
 		</div>
     </body>
 </html>
