--- a/helper/template/maths/index.html
+++ b/helper/template/maths/index.html
@@ -17,7 +17,7 @@
 		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="">Normal Distribution</a>
 		        </div>
 		    </div>
-            <h3 class="righteous text-center my-2">Next Solver comming soon....</h3>
+            <h3 class="righteous text-center my-2">Next Solver comming soon....<br>Normal Distribution is Not Deployed Now..</h3>
 		</div>
     </body>
 {% endblock %}
