Normal Distribution Added

--- a/helper/template/maths/index.html
+++ b/helper/template/maths/index.html
@@ -14,7 +14,7 @@
 		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="/maths/poisson">Poisson Distribution</a>
 		        </div>
 		        <div class="col-sm-6 col-12 my-2">
-		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="">Normal Distribution</a>
+		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="/maths/normal">Normal Distribution</a>
 		        </div>
 		    </div>
             <h3 class="righteous text-center my-2">Next Solver comming soon....<br>Normal Distribution is Not Deployed Now..</h3>
