Unneccesary buttons disabled Added

--- a/helper/template/helper/index.html
+++ b/helper/template/helper/index.html
@@ -42,10 +42,10 @@
 		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="/maths">Maths</a>
 		        </div>
 		        <div class="col-sm-6 col-12 my-2">
-		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="">AEC</a>
+		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="" style="pointer-events: none;">AEC</a>
 		        </div>
 		        <div class="col-sm-6 col-12 my-2">
-		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="">SS</a>
+		            <a class="text-center btn btn-block bg-primary text-white border-dark" href="" style="pointer-events: none;">SS</a>
 		        </div>
 		    </div>
             <h3 class="righteous text-center my-2">Next Solver comming soon....<br>AEC & SS is Not Deployed Now..</h3>
