--- a/helper/template/maths/normal/normal.html
+++ b/helper/template/maths/normal/normal.html
@@ -44,13 +44,13 @@
                     <p class="text-dark text-center montserrat-alt">Choose Last Limit:</p>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="last" id="pos-infinity" value="pos-infinity" checked>
-                        <label class="form-check-label" for="limit1">
+                        <label class="form-check-label" for="pos-infinity">
                         To ∞  (eg. x ≥ -3)
                         </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="last" id="neg-infinity" value="neg-infinity">
-                        <label class="form-check-label" for="limit2">
+                        <label class="form-check-label" for="neg-infinity">
                         To -∞  (eg. x ≤ -3)
                         </label>
                     </div>
